# summerschool24

./: .gitignore  README.md  environment.yml  pyproject.toml
data/tsa02/: data_preprocessing.csv
notebooks/: 01tsa_basics.ipynb  02tsa_01_preprocessing.ipynb  02tsa_02_store_eda.ipynb  03tsa_forecasting.ipynb
