[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SummerschoolHKA"
version = "0.1.0"
description = "Your project description"
authors = ["Lukas Theurer lackeslab@gmail.com"]


[tool.poetry.dependencies]
python = "^3.9"
u8darts = "^0.25.0"
prophet = "^1.1.4"
jupyterlab = "^4.0.5"
plotly = "^5.16.1"
pandas = "^2.1.0"
torch = "^2.0.1"
langchain = "^0.0.289"
aleph-alpha-client = "^3.4.1"
